# docdelve

./: .gitignore  Cargo.toml  LICENSE  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
.cargo/: config.toml
generators/qt/: Cargo.toml
generators/qt/src/: main.rs  qt.rs  qt_dark_mode.patch
generators/rust/: Cargo.toml
generators/rust/src/: main.rs  stdlib.rs
images/: docdelve.afdesign  docdelve.icns
lib/: Cargo.toml
lib/src/: chest.rs  container.rs  content.rs  db.rs  lib.rs  progress.rs
src/: lib.rs
src/main/: main.ts
src/preload/: api.d.ts  preload.ts
src/renderer/: blank.css  blank.html  index.html  renderer.tsx  root.tsx  searchresults.tsx  sidebar.tsx  style.css  titlebar.tsx
tools/chest/: Cargo.toml
tools/chest/src/: main.rs
