[package]
name = "docdelve"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
zip = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4"] }
code-fuzzy-match = { path = "../../code-fuzzy-match" }
directories = "5.0"
diffy = "0.3"
btree-range-map = "0.7"
rayon = "1.8"
regex = "1.10"
if_chain = "1.0"
tar = "0.4"
